footer align fix

--- a/style.css
+++ b/style.css
@@ -160,9 +160,8 @@ html, body {
   width: 100%;
 }
 
-.container{
-  display: inline-block;
-
+.footer_align{
+  display:inline-block;
 }
 
 .footer__mark {
